[gd_scene load_steps=5 format=2]

[ext_resource path="res://crosshair/CrosshairRed.png" type="Texture" id=1]
[ext_resource path="res://crosshair/CrosshairGreen.png" type="Texture" id=2]
[ext_resource path="res://crosshair/crosshair.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 33.0

[node name="Crosshair" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteGreen" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 2 )

[node name="SpriteRed" type="Sprite" parent="."]
position = Vector2( 0, -128 )
texture = ExtResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_Crosshair_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Crosshair_area_exited"]
